# Website-Categorizer

./: .gitignore  README.md  Website Categorization.ipynb  main.py  pyproject.toml
classes/: classify.py  website.py
notebook/: Website Categorization.ipynb
